# mini-raft

./: Cargo.toml  NOTICE  README.md
src/raft/: Cargo.toml
src/raft/src/: candidate.rs  config.rs  driver.rs  follower.rs  group.rs  index.rs  info.rs  leader.rs  lib.rs  log.rs  message.rs  node.rs  observer.rs  peer.rs  pos.rs  raft.rs  stage.rs  term.rs  transition.rs  votes.rs
tests/isolated/: Cargo.toml
tests/isolated/src/: builder.rs  driver.rs  lib.rs  macros.rs
tests/isolated/tests/: test_election.rs  test_flow.rs  test_follower.rs  test_leader.rs  test_lifecycle.rs  test_observer.rs
tests/simulated/: Cargo.toml
tests/simulated/src/: builder.rs  driver.rs  io.rs  lib.rs  message.rs  node.rs
tests/simulated/tests/: test_raft.rs
tests/validated/: Cargo.toml
tests/validated/src/: lib.rs
