[package]
name = "mini-raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures-lite = "1"
indexmap = "1.9.1"
serde = { version = "1.0.142", features = ["derive"] }
tokio = { version = "1.19", features = ["time", "test-util"] }
tracing = "0.1.35"
