[package]
name = "isolated"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
validated = { path = "../validated" }
futures-lite = "1"
mini-raft = { path = "../../src/raft" }
tokio = { version = "1.19", features = ["time"] }
pretty_assertions = "1.2.1"
