[package]
name = "simulated"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turmoil = { path = "/home/carllerche/Code/turmoil" }

futures = "0.3"
mini-raft = { path = "../../src/raft" }
validated = { path = "../validated" }
getrandom = "0.2"
rand = { version = "0.8.5", features = ["small_rng"] }
tokio = { version = "1.19", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
